	* 18/09:
	- no partial downloads anymore
	* 16/09:
	- improved IPC
	* 14/09:
	- quick help
	* 13/09:
	- setup works
	- IPC with ilenia-notifier
	* 11/09:
	- ProgressiveDownload is now a class
	- Fixed favoriterepo issues
	* 10/09:
	- Enhaced download progressbar (ProgressiveDownload)
	- Working install and update packages
	* 07/09:
	- Created Repos class
	- Created download with progressbar
	- Improved Packages class
	- Cleaned code
	- Supporting -U command
	- Created Favoriterepo
	* 06/09:
	- homemade OptionParser
	* 05/09:
	- pythonized and slackwarized
1.4:
	- feature: introduced alias
	- feature: added a little search function
1.3:	
	- feature: support for local repository
	- feature: --cache forces ilenia to rebuild the cache
	- feature: introduced ilenia.rc file
	- feature: introduced the POST_PKGADD commands
	- change:  better way to parse *.{cvsup,cvs,httpup,local} file
	- change:  more logical way to manage repositories information
	- bugfix:  reduced CPU usage while compiling packages (thanks to nullpointer)
	- bugfix:  evited to build two or more times the same package from various repositories during `ilenia -U`
1.2:
	- feature: support for crux ppc's .cvs supfile
	- change:  a better support for pre and post install scripts
	- bugfix:  fixed segfaults when trying to install non existent ports
1.1:
	- feature: -R remove packages checking dependents
	- feature: -T shows dependents package of the specified package
	- feature: flexible way of storing ports 
	- change:  now ilenia has only a cache file in /var/cache/ilenia
	- change:  a better support for dependencies
	- various bugfixes